lab1/Test/L1-A-7-52.cmm
int ;
float wtpyKmdMUWXOHC0IsR_ [ 1003521591 ] , Qhe 

;
struct EiBi2YfUD8FOYh G 
;
int ;
struct yO5dbCi_UBUGBxf3D0sQ sB7qrBT7u0o_KgNCZ ( int 
  Q5ECXoy , int F1R0CM ) {
  struct PiBkaXB8 {
  }nSTN7CJ6Z = h_BEE && fcB6YshoutS != oL6x / ! ! 
    XUmR [ BJru0V_TuHkvmNxTrknU = eFHYUHzfqoZE7vzti1Sa 
    = vrIGWSbd9i || RjDYVCnOAnY > cCklh5 + - t5oM ( lFc 
    , gtW1SaYo4qTCbmGVqN9 || L7 - #( MBHmVWH >= ZyGb - 
    fpos5 / ushRE [ Rhg <= JXHE8FkhWMW52 ] < 2057554630 
    ) == - AfUyUOllicFdC9udWq ) ] - - ! ! 16185048.579489979 
    . Y0l3dqn8Q_ * YReIvHZMCIdf1K5 ( ) ;
}
int ;
struct eaYIkVrX5XWYSKM ;
int ;
int lwf8938Hs8fr0 ( ) {
  bvImJCsAdCgpW ;
  if ( VY15Qla3kHMYKIs )   uC ;
else   if ( pzmYBwqXvDI544 )   if ( RNURq_rrauwL `
    ) {
  }else   hLvYLVIs_lKJwNA ;



}
int ebkCk_GUjw ( ) {
  struct {
  }tikTqwIIdMJLwDNurBYX , gbmOniVkoP46bFpWHalM `;
  while ( J )   return fZw ;

}
int ;
